# Substrata

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml
docs/: development.md  index.md  issue-writing.md  maintainers.md  support.md  triage.md
docs/architecture/: README.md  foundation.md
examples/: basic_app.py
substrata/: __init__.py  app.py  cli.py  config.py  constants.py  errors.py  logging.py
substrata/integrations/: __init__.py
substrata/models/: __init__.py
substrata/services/: __init__.py  runtime.py
tests/: test_cli.py  test_config.py  test_constants.py  test_foundations.py
tests/services/: test_runtime.py
